--- a/src/pages/Applicant/Login/styles.module.scss
+++ b/src/pages/Applicant/Login/styles.module.scss
@@ -13,7 +13,6 @@
 
 .register {
   margin-bottom: $spacing-m;
-  margin-top: $spacing-l;
 }
 
 .forgotYourPassword {
