--- a/src/pages/Company/Login/styles.module.scss
+++ b/src/pages/Company/Login/styles.module.scss
@@ -6,10 +6,6 @@
   justify-content: center;
 }
 
-.register {
-  margin-top: $spacing-l;
-}
-
 .dontHaveAnAccount {
   margin-right: $spacing-s;
 }
